# neiom-chatterbox

./: .gitignore  README.md  download_multilingual_model.py  example_tts.py  multilingual_app.py  pyproject.toml  requirements-luxembourgish.txt
configs/: runpod_luxembourgish.yaml
data/scripts/: build_and_validate_luxembourgish.sh  check_luxembourgish_combined.py  check_rtl_dataset_filenames.py  prepare_luxembourgish_combined.py  prepare_luxembourgish_male_only.py
scripts/: generate_luxembourgish.py  run_full_finetune.sh
src/chatterbox/: mtl_tts.py
src/chatterbox/models/neom-training/finetune/: loop.py
src/chatterbox/models/s3gen/transformer/: positionwise_feed_forward.py
src/chatterbox/models/t3/: t3.py  utils.py
src/chatterbox/models/t3/modules/: cond_enc.py  t3_config.py
src/chatterbox/training/: __init__.py  config.py  data_preparation.py  eval.py  model_utils.py  orchestrator.py  train_t3.py  trainer.py  utils.py
src/chatterbox/training/datasets/: __init__.py  collate.py  t3_dataset.py
src/perth/: __init__.py
